files/istio/hello/test_go_gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-go-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-go
spec:
  hosts:
  - "*"
  gateways:
  - test-go-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: test-go
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-go-version
spec:
  hosts:
  - test-go
  http:
  - route:
    - destination:
        host: test-go
        subset: v1
      weight: 75
    - destination:
        host: test-go
        subset: v2
      weight: 25
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-go-destination
spec:
  host: test-go # interpreted as test-go.<namespace>.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
