files/istio/hello/test_go_weight.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-go-version
spec:
  hosts:
  - test-go
  http:
  - route:
    - destination:
        host: test-go
        subset: v1
      weight: 90
    - destination:
        host: test-go
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-go-destination
spec:
  host: test-go # interpreted as test-go.<namespace>.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
